--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,22 @@
 h5 {
   color: #111;
 }
+.bg-home {
+  background: url("./Assets/home.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.overlay {
+  background-color: #000000;
+  background-image: linear-gradient(315deg, #000000 0%, #414141 74%);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  opacity: 0.6;
+}
+.z-10 {
+  z-index: 10;
+}
