--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,9 @@ h5 {
 .text-left-lg {
   text-align: left;
 }
+.display-5 {
+  font-size: 2em;
+}
 @media screen and (max-width: 600px) {
   .home-image {
     margin: 0px auto !important;
